<resources>
    <string name="app_name">Citizen Science</string>
    <string name="permission_denied_explanation">Your location access is denied, please allow the app to access your GPS.</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Allow the app to access your GPS to detect location.</string>
    <string name="sign_in">Sign in</string>
    <string name="upload">Send now</string>
    <string name="save">Save, upload later</string>
    <string name="action_logout">Logout</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="submitted_date">Submitted date</string>
    <string name="you_can_submit_your_record_now_or_save_it_for_sending_later">You can upload your recording now, or save it to send later. You need an internet connection to send the data now.</string>
    <string name="your_rank">My rank</string>
    <string name="your_records">My submitted/verified records</string>
    <string name="your_submitted_records">My submitted records</string>
    <string name="your_verified_records">My verified records</string>
    <string name="total_records">Total records</string>
    <string name="my_local_records">My local records</string>
    <string name="upload_all">Upload all</string>
    <string name="select_image">Select image</string>
    <string name="please_select_image_first">Please select image first!</string>
    <string name="accuracy">Accuracy:</string>
    <string name="your_location_is_not_precise">Your location is not accurate!</string>
    <string name="upload_failed_please_retry">Failed to upload, please try again!</string>
    <string name="sign_in_error">Error:</string>
    <string name="please_wait">Please wait ...</string>
    <string name="press_back_once_again_to_exit_from_the_app">Press the back button one more time to exit the application.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="delete_image">Delete image</string>
    <string name="survey_empty_rb_answer">Choose one option</string>
    <string name="survey_empty_cb_answer">Choose at least one option</string>
    <string name="survey_empty_et_answer">Fill the response in the text field</string>
    <string name="version">App version</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_and_condition">In this application, you will be asked to enter data related to the projects you contribute to. Also, you will be asked to fill out questionnaires afterward. By using this application, you agree that:\n
    1. Any information you submit will be kept confidential\n
    2. Your name or any information that might identify you in the study report will not be used\n
    3. Your participation is completely voluntary\n
    4. You have the right to withdraw your participation at any time or refuse to answer some of the questions\n
    5. The data that you upload will be analyzed only for academic purposes and will be published in the form of statistical aggregations in scientific journals or conferences</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your valid email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter a password of at least 6 characters</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="zip_code">Kode pos</string>
    <string name="enter_your_zip_code">Enter zip code of your current address</string>
    <string name="occupation">Occupation</string>
    <string name="enter_your_occupation">Enter your occupation</string>
    <string name="education_level">Education level</string>
    <string name="tapping_next">By tapping the Next button</string>
    <string name="i_agree">I agree with</string>
    <string name="tnc">consent, terms, and conditions</string>
    <string name="consent">Informed consent, terms, and conditions</string>
    <string name="email_verification">Verify your email</string>
    <string name="user_name">User name</string>
    <string name="uploading">"Uploading "</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username_is_not_found">Username is not found</string>
    <string name="username_must_be_filled">Username must be filled</string>
    <string name="user_has_not_been_verified">User has not been verified</string>
    <string name="add_new_record">Add new record</string>
    <string name="no_steps">Steps to record data do not exist</string>
    <string name="delete_data">Deleting data</string>
    <string name="are_you_sure_to_delete">Are you sure to delete this data?</string>
    <string name="add_new_data">Add new data</string>
    <string name="uploading_failed">Upload failed, please retry!</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="selected_images">Selected images</string>
    <string name="no_images_left">No images left</string>
    <string name="delete_all_data">Delete all local data</string>
    <string name="no_data">No local data yet, add new data by tapping three dots in the top right corner</string>
    <string name="not_uploaded_yet">not uploaded yet</string>
    <string name="uploaded">uploaded successfully</string>
    <string name="is_uploading">is uploading</string>
    <string name="change_profile">Change profile</string>
    <string name="change_password">Change password</string>
    <string name="update_profile">Update profile</string>
    <string name="name_cant_be_empty">Full name cannot be empty</string>
    <string name="email_cant_be_empty">Email cannot be empty</string>
    <string name="email_must_be_valid">Email must be valid</string>
    <string name="age_cant_be_empty">Age cannot be empty</string>
    <string name="age_must_be_bigger_than_0_and_smaller_than_99">Age must be bigger than 0 and smaller than 99</string>
    <string name="age_must_be_valid">Age must be valid</string>
    <string name="address_cant_be_empty">Address cannot be empty</string>
    <string name="zip_code_cant_be_empty">Zip code cannot be empty</string>
    <string name="zip_code_length_must_be_5">Zip code length must be 5</string>
    <string name="occupation_cant_be_empty">Occupation cannot be empty</string>
    <string name="success">Success!</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="new_password">New password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_new_password">New password confirmation</string>
    <string name="reenter_your_new_password">Re-enter your new password</string>
    <string name="update">Update</string>
    <string name="old_password_cant_be_empty">Old password cannot be empty</string>
    <string name="new_password_cant_be_empty">New password cannot be empty</string>
    <string name="new_passwords_must_be_the_same">New passwords must be the same</string>
    <string name="password_length_must_be_at_least_6_characters">Password length must be at least 6 characters</string>
    <string name="password_cant_be_empty">Password cannot be empty</string>
    <string name="failed_check_your_internet_connection">Failed, check your internet_connection!</string>
    <string name="at_question_no">" at question number "</string>
    <string name="latitude_cant_be_empty">Latitude cannot be empty</string>
    <string name="latitude_must_be_a_floating_value">Latitude must be a floating value</string>
    <string name="latitude_cant_be_0">Latitude cannot be 0</string>
    <string name="longitude_cant_be_empty">Longitude cannot be empty</string>
    <string name="longitude_must_be_a_floating_value">Longitude must be a floating value</string>
    <string name="longitude_cant_be_0">Longitude cannot be 0</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="verification">Verification</string>
    <string name="verification_code_sent">Verification code has been sent to your email</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="create_your_password">Create your password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="data_records">Data records</string>
    <string name="online_map">Online map</string>
    <string name="my_account">My account</string>
    <string name="username_cant_be_empty">username_cannot_be_empty</string>
    <string name="metadata">Metadata</string>
    <string name="project_name">Project</string>
    <string name="uploaded_record">My submitted data</string>
    <string name="verified_data">My verified data</string>
    <string name="all_data">All data</string>
    <string name="view_online_data">View online data</string>
    <string name="data_for_project">"View uploaded data for project "</string>
    <string name="contribute_data_for_project">"Contribute data for project "</string>
    <string name="data_for_user">View uploaded data</string>
    <string name="uuid">Uuid</string>
    <string name="device_id">Device id</string>
</resources>
